# myPractices

./: README.md  bak
learnSlamfrom0/002_practice/: CMakeLists.txt  convertIndex.cpp  eigenRotate.cpp
learnSlamfrom0/003_practice/: CMakeLists.txt  my_sort.cpp
learnSlamfrom0/005_practice/: CMakeLists.txt  useEigen.cpp
learnSlamfrom0/008_practice/: CMakeLists.txt  draw_trajectory.cpp
learnSlamfrom0/009_practice/: undistort_image.cpp
learnSlamfrom0/011_practice/: CMakeLists.txt  epipolar.cpp
learnSlamfrom0/012_practice/: CMakeLists.txt  virtual-billboard.cpp
learnSlamfrom0/013_practice/: CMakeLists.txt
learnSlamfrom0/013_practice/include/: slamBase.hpp
learnSlamfrom0/013_practice/src/: CMakeLists.txt  pointCloudFusion.cpp  slamBase.cpp
learnSlamfrom0/014_practice/: CMakeLists.txt
learnSlamfrom0/014_practice/data/: cloud_inliers.pcd  cloud_outliers.pcd
learnSlamfrom0/014_practice/src/: CMakeLists.txt  pointCloudFilter.cpp
learnSlamfrom0/015_practice/: smoothedPC.pcd
learnSlamfrom0/015_practice/src/: pointCloud2Mesh.cpp
my_slambook/ch10/g2o_custombundle/: CMakeLists.txt
my_slambook/ch10/g2o_custombundle/common/flags/: command_args.h
my_slambook/ch12/: CMakeLists.txt  feature_tranining.cpp  loop_closure.cpp
my_slambook/ch13/dense_monocular/: dense_mapping.cpp
my_slambook/mch2/: helloSLAM.cpp
my_slambook/mch2/.kdev4/: ch2.kdev4
my_slambook/mch3/: CMakeLists.txt  eigenMatrix.cpp  useGeometry.cpp
my_slambook/mch4/: CMakeLists.txt  useSophus.cpp
my_slambook/mch5/imageBasics/: imageBasics.cpp
my_slambook/mch5/joinMap/: CMakeLists.txt  joinMap.cpp
my_slambook/mch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
my_slambook/mch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
my_slambook/mch7/: CMakeLists.txt  feature_extraction.cpp
my_slambook/practice/: CMakeLists.txt  main.cpp
my_slambook/test/: CMakeLists.txt  helloSLAM.cpp
my_slambook/test/.kdev4/: test.kdev4
my_slambook/useku/: CMakeLists.txt  libHelloSLAM.cpp  useHello.cpp  useku.kdev4
my_slambook/useku/.kdev4/: useku.kdev4
